initialized the first microservice

--- a/timetable-service/src/main/resources/application.properties
+++ b/timetable-service/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=timetable-service
+
+server.port=8081
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/time_table_management_system
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+
+# Enable WebFlux Logging
+logging.level.org.springframework.web.reactive=DEBUG
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092    # Adjust with your Kafka server address
+spring.kafka.consumer.group-id=timetable-group    # Consumer group
+spring.kafka.listener.concurrency=3
